--- a/校验规则及对应的字段.md
+++ b/校验规则及对应的字段.md
@@ -5,45 +5,45 @@
 
 ## 目录
 
-+ [必填(require)](#require)
-+ [名称(userName)](#userName)
-+ [电话(tel)](#tel)
-+ [邮箱(email)](#email)
-+ [微信(wechat)](#wechat)
-+ [手机(mobile)](#mobile)
-+ [密码(pwd)](#pwd)
-+ [法人(legalPerson)](legalPerson)
-+ [地址(address)](#address)
-+ [备注(comment)](#comment)
-+ [组织名称(orgName)](#orgName)
-+ [描述(description)](#description)
-+ [潜客跟进天数(followUpDay)](#followUpDay)
-+ [潜客跟进说明(followUpDescription)](#followUpDescription)
-+ [车型名称(modelName)](#modelName)
-+ [维修项目名称(repairProjectName)](#repairProjectName)
-+ [维修项目代码(repairProjectCode)](#repairProjectCode)
-+ [工时(workingHours)](#workingHours)
-+ [单价(unitPrice)](#unitPrice)
-+ [QQ(QQ)](#QQ)
-+ [主营业务(mainBusiness)](#mainBusiness)
-+ [配件名称(partsName)](#partsName)
-+ [配件代码(partsCode)](#partsCode)
-+ [计量单位(countUnit)](#countUnit)
-+ [采购价格(purchasePrice)](#purchasePrice)
-+ [最少订购(minOrderNum)](#minOrderNum)
-+ [建议售价(suggestPrice)](#suggestPrice)
-+ [最低售价(minPrice)](#minPrice)
-+ [最高售价(maxPrice)](#maxPrice)
-+ [仓库名称(wareHouseName)](#wareHouseName)
-+ [仓库代码(wareHouseCode)](#wareHouseCode)
-+ [审核描述(examineDescription)](#examineDescription)
-+ [意向颜色(purposeColor)](#purposeColor)
-+ [购车预算(carBudget)](#carBudget)
-+ [初次接待(firstFollow)](#firstFollow)
-+ [对比车型(compareModel)](#compareModel)
-+ [安全库存(safeStock)](#safeStock)
-+ [库存数量(stockNum)](#stockNum)
-+ [成本单价(costPrice)](#costPrice)
+- [必填(require)](#require)
+- [名称(userName)](#userName)
+- [电话(tel)](#tel)
+- [邮箱(email)](#email)
+- [微信(wechat)](#wechat)
+- [手机(mobile)](#mobile)
+- [密码(pwd)](#pwd)
+- [法人(legalPerson)](legalPerson)
+- [地址(address)](#address)
+- [备注(comment)](#comment)
+- [组织名称(orgName)](#orgName)
+- [描述(description)](#description)
+- [潜客跟进天数(followUpDay)](#followUpDay)
+- [潜客跟进说明(followUpDescription)](#followUpDescription)
+- [车型名称(modelName)](#modelName)
+- [维修项目名称(repairProjectName)](#repairProjectName)
+- [维修项目代码(repairProjectCode)](#repairProjectCode)
+- [工时(workingHours)](#workingHours)
+- [单价(unitPrice)](#unitPrice)
+- [QQ(QQ)](#QQ)
+- [主营业务(mainBusiness)](#mainBusiness)
+- [配件名称(partsName)](#partsName)
+- [配件代码(partsCode)](#partsCode)
+- [计量单位(countUnit)](#countUnit)
+- [采购价格(purchasePrice)](#purchasePrice)
+- [最少订购(minOrderNum)](#minOrderNum)
+- [建议售价(suggestPrice)](#suggestPrice)
+- [最低售价(minPrice)](#minPrice)
+- [最高售价(maxPrice)](#maxPrice)
+- [仓库名称(wareHouseName)](#wareHouseName)
+- [仓库代码(wareHouseCode)](#wareHouseCode)
+- [审核描述(examineDescription)](#examineDescription)
+- [意向颜色(purposeColor)](#purposeColor)
+- [购车预算(carBudget)](#carBudget)
+- [初次接待(firstFollow)](#firstFollow)
+- [对比车型(compareModel)](#compareModel)
+- [安全库存(safeStock)](#safeStock)
+- [库存数量(stockNum)](#stockNum)
+- [成本单价(costPrice)](#costPrice)
 
 ## 模块-正则-规则-错误提示
 
@@ -173,7 +173,8 @@
 * 必填
 * 最大长度为128
 
-        1.车型名称不允许为空，请输入车型名称        2.车型名称不能超过32个字符，请重新输入
+        1.车型名称不允许为空，请输入车型名称
+        2.车型名称不能超过32个字符，请重新输入
 
 ### <span id="repairProjectName">维修项目名称</span>(repairProjectName)
 `/^.{1,128}$/`
@@ -181,7 +182,8 @@
 * 必填
 * 最大长度为128
 
-        1.项目名称不允许为空，请输入项目名称        2.项目名称不能超过128个字符，请重新输入
+        1.项目名称不允许为空，请输入项目名称
+        2.项目名称不能超过128个字符，请重新输入
 
 ### <span id="repairProjectCode">维修项目编码</span>(repairProjectCode)
 `/^[A-Z]{0,32}$/`
@@ -193,21 +195,24 @@
 ### <span id="workingHours">工时</span>(workingHours)
 `/^\d{1,6}(\.\d{1,2})?$/`
 
-* 不允许输入中文、字母、负数和除“.”以外的符号；* 只能输入0-999999.99之间的数字（可以为小数，最多保留2位）
+* 不允许输入中文、字母、负数和除“.”以外的符号；
+* 只能输入0-999999.99之间的数字（可以为小数，最多保留2位）
 
         工时格式不正确，请输入0-999999.99之间的数字（最多保留2位小数）
 
 ### <span id="unitPrice">单价</span>(unitPrice)
 `/^\d{1,8}(\.\d{1,2})?$/`
 
-* 不允许输入中文、字母、负数和除“.”以外的符号；* 只能输入0-99999999.99之间的数字（可以为小数，最多保留2位）
+* 不允许输入中文、字母、负数和除“.”以外的符号；
+* 只能输入0-99999999.99之间的数字（可以为小数，最多保留2位）
 
         单价格式不正确，请输入0-99999999.99之间的数字（最多保留2位小数）
 
 ### <span id="QQ">QQ</span>(QQ)
 `/^\d{5,19}$/`
 
-* 不允许输入中文、字母、符号和空格。* 正确的格式为5-19位的数字
+* 不允许输入中文、字母、符号和空格。
+* 正确的格式为5-19位的数字
 
         QQ格式不正确，请输入5-19位数字
 
@@ -224,7 +229,8 @@
 * 必填
 * 最大长度为32
 
-        1.配件名称不允许为空，请输入配件名称        2.配件名称不能超过32个字符，请重新输入
+        1.配件名称不允许为空，请输入配件名称
+        2.配件名称不能超过32个字符，请重新输入
 
 ### <span id="partsCode">配件代码</span>(partsCode)
 `/^[A-Z]{1,32}$/`
@@ -233,7 +239,9 @@
 * 最大长度为32
 * 不允许输入中文、空格（输入的字母默认为大写）
 
-        1.配件代码不允许为空，请输入配件代码        2.配件代码不能超过32个字符，请重新输入        3.配件代码格式不正确，不允许输入中文和空格
+        1.配件代码不允许为空，请输入配件代码
+        2.配件代码不能超过32个字符，请重新输入
+        3.配件代码格式不正确，不允许输入中文和空格
 
 ### <span id="countUnit">计量单位</span>(countUnit)
 `/^.{0,8}$/`
@@ -245,35 +253,40 @@
 ### <span id="purchasePrice">采购价格</span>(purchasePrice)
 [同单价](#unitPrice)
 
-* 不允许输入中文、字母、除“.”以外的符号、负数和空格* 正确的格式0-99999999.99之间的数字，最多保留2位小数
+* 不允许输入中文、字母、除“.”以外的符号、负数和空格
+* 正确的格式0-99999999.99之间的数字，最多保留2位小数
 
         采购价格格式不正确，请输入0-99999999.99之间的数字（最多保留2位小数）
 
 ### <span id="minOrderNum">最少订购</span>(minOrderNum)
 [同工时](#workingHours)
 
-* 不允许输入中文、字母、除“.”以外的符号、负数和空格* 正确的格式0-999999.99之间的数字，最多保留2位小数
+* 不允许输入中文、字母、除“.”以外的符号、负数和空格
+* 正确的格式0-999999.99之间的数字，最多保留2位小数
 
         最少订购格式不正确，请输入0-999999.99之间的数字（最多保留2位小数）
 
 ### <span id="suggestPrice">建议售价</span>(suggestPrice)
 [同单价](#unitPrice)
 
-* 不允许输入中文、字母、除“.”以外的符号、负数和空格* 正确的格式0-99999999.99之间的数字，最多保留2位小数
+* 不允许输入中文、字母、除“.”以外的符号、负数和空格
+* 正确的格式0-99999999.99之间的数字，最多保留2位小数
 
         建议售价格式不正确，请输入0-99999999.99之间的数字（最多保留2位小数）
 
 ### <span id="minPrice">最低售价</span>(minPrice)
 [同单价](#unitPrice)
 
-* 不允许输入中文、字母、除“.”以外的符号、负数和空格* 正确的格式0-99999999.99之间的数字，最多保留2位小数
+* 不允许输入中文、字母、除“.”以外的符号、负数和空格
+* 正确的格式0-99999999.99之间的数字，最多保留2位小数
 
         最低售价格式不正确，请输入0-99999999.99之间的数字（最多保留2位小数）
 
 ### <span id="maxPrice">最高售价</span>(maxPrice)
 [同单价](#unitPrice)
 
-* 不允许输入中文、字母、除“.”以外的符号、负数和空格* 正确的格式0-99999999.99之间的数字，最多保留2位小数
+* 不允许输入中文、字母、除“.”以外的符号、负数和空格
+* 正确的格式0-99999999.99之间的数字，最多保留2位小数
 
         最高售价格式不正确，请输入0-99999999.99之间的数字（最多保留2位小数）
 
@@ -283,7 +296,8 @@
 * 必填
 * 最大长度为32(可以输入空格)
 
-        1.仓库名称不允许为空，请输入仓库名称        2.仓库名称不能超过32个字符，请重新输入
+        1.仓库名称不允许为空，请输入仓库名称
+        2.仓库名称不能超过32个字符，请重新输入
 
 ### <span id="wareHouseCode">仓库代码</span>(wareHouseCode)
 [同配件名称](#partsName)
@@ -292,7 +306,9 @@
 * 最大长度为32
 * 不允许输入中文、空格（输入的字母默认为大写）
 
-        1.仓库代码不允许为空，请输入仓库代码        2.仓库代码不能超过32个字符，请重新输入        3.仓库代码格式不正确，不允许输入中文和空格
+        1.仓库代码不允许为空，请输入仓库代码
+        2.仓库代码不能超过32个字符，请重新输入
+        3.仓库代码格式不正确，不允许输入中文和空格
 
 ### <span id="examineDescription">审核描述</span>(examineDescription)
 [同地址](#address)
@@ -336,7 +352,8 @@
 * 不允许输入中文、字母、除“.”以外的符号、负数和空格
 * 正确的格式0-999999.99之间的数字，最多保留2位小数
 
-        1.安全库存不允许为空，请输入安全库存        2.安全库存格式不正确，请输入0-999999.99之间的数字（最多保留2位小数）
+        1.安全库存不允许为空，请输入安全库存
+        2.安全库存格式不正确，请输入0-999999.99之间的数字（最多保留2位小数）
 
 ### <span id="stockNum">库存数量</span>(stockNum)
 [同工时](#workingHours)
@@ -345,13 +362,16 @@
 * 不允许输入中文、字母、除“.”以外的符号、负数和空格
 * 正确的格式0-999999.99之间的数字，最多保留2位小数
 
-        1.库存数量不允许为空，请输入库存数量        2.库存数量格式不正确，请输入0-999999.99之间的数字（最多保留2位小数）
+        1.库存数量不允许为空，请输入库存数量
+        2.库存数量格式不正确，请输入0-999999.99之间的数字（最多保留2位小数）
 
 ### <span id="costPrice">成本单价</span>(costPrice)
 [同单价](#unitPrice)
 
-* 库存数量不允许为空，请输入库存数量* 库存数量格式不正确，请输入0-999999.99之间的数字（最多保留2位小数）
+* 库存数量不允许为空，请输入库存数量
+* 库存数量格式不正确，请输入0-999999.99之间的数字（最多保留2位小数）
 
-        1.成本单价不允许为空，请输入成本单价        2.成本单价格式不正确，请输入0-99999999.99之间的数字（最多保留2位小数）
+        1.成本单价不允许为空，请输入成本单价
+        2.成本单价格式不正确，请输入0-99999999.99之间的数字（最多保留2位小数）
 
 
