--- a/校验规则及对应的字段.md
+++ b/校验规则及对应的字段.md
@@ -5,14 +5,14 @@
 
 ## 目录
 
-- [必填(require)](#require)
-- [名称(userName)](#userName)
+- [必填(require)](#必填require)
+- [名称(userName)](#名称userName)
 - [电话(tel)](#tel)
 - [邮箱(email)](#email)
 - [微信(wechat)](#wechat)
 - [手机(mobile)](#mobile)
 - [密码(pwd)](#pwd)
-- [法人(legalPerson)](legalPerson)
+- [法人(legalPerson)](#legalPerson)
 - [地址(address)](#address)
 - [备注(comment)](#comment)
 - [组织名称(orgName)](#orgName)
