--- a/校验规则及对应的字段.md
+++ b/校验规则及对应的字段.md
@@ -6,18 +6,18 @@
 ## 目录
 
 - [必填(require)](#必填require)
-- [名称(userName)](#名称userName)
-- [电话(tel)](#tel)
-- [邮箱(email)](#email)
-- [微信(wechat)](#wechat)
-- [手机(mobile)](#mobile)
-- [密码(pwd)](#pwd)
-- [法人(legalPerson)](#legalPerson)
-- [地址(address)](#address)
-- [备注(comment)](#comment)
-- [组织名称(orgName)](#orgName)
-- [描述(description)](#description)
-- [潜客跟进天数(followUpDay)](#followUpDay)
+- [名称(userName)](#名称username)
+- [电话(tel)](#电话tel)
+- [邮箱(email)](#邮箱email)
+- [微信(wechat)](#微信wechat)
+- [手机(mobile)](#手机mobile)
+- [密码(pwd)](#密码pwd)
+- [法人(legalPerson)](#法人legalperson)
+- [地址(address)](#地址address)
+- [备注(comment)](#备注comment)
+- [组织名称(orgName)](#组织名称orgName)
+- [描述(description)](#描述description)
+- [潜客跟进天数(followUpDay)](#潜客跟进天数followupday)
 - [潜客跟进说明(followUpDescription)](#followUpDescription)
 - [车型名称(modelName)](#modelName)
 - [维修项目名称(repairProjectName)](#repairProjectName)
