--- a/校验规则及对应的字段.md
+++ b/校验规则及对应的字段.md
@@ -18,32 +18,32 @@
 - [组织名称(orgName)](#组织名称orgName)
 - [描述(description)](#描述description)
 - [潜客跟进天数(followUpDay)](#潜客跟进天数followupday)
-- [潜客跟进说明(followUpDescription)](#followUpDescription)
-- [车型名称(modelName)](#modelName)
-- [维修项目名称(repairProjectName)](#repairProjectName)
-- [维修项目代码(repairProjectCode)](#repairProjectCode)
-- [工时(workingHours)](#workingHours)
-- [单价(unitPrice)](#unitPrice)
-- [QQ(QQ)](#QQ)
-- [主营业务(mainBusiness)](#mainBusiness)
-- [配件名称(partsName)](#partsName)
-- [配件代码(partsCode)](#partsCode)
-- [计量单位(countUnit)](#countUnit)
-- [采购价格(purchasePrice)](#purchasePrice)
-- [最少订购(minOrderNum)](#minOrderNum)
-- [建议售价(suggestPrice)](#suggestPrice)
-- [最低售价(minPrice)](#minPrice)
-- [最高售价(maxPrice)](#maxPrice)
-- [仓库名称(wareHouseName)](#wareHouseName)
-- [仓库代码(wareHouseCode)](#wareHouseCode)
-- [审核描述(examineDescription)](#examineDescription)
-- [意向颜色(purposeColor)](#purposeColor)
-- [购车预算(carBudget)](#carBudget)
-- [初次接待(firstFollow)](#firstFollow)
-- [对比车型(compareModel)](#compareModel)
-- [安全库存(safeStock)](#safeStock)
-- [库存数量(stockNum)](#stockNum)
-- [成本单价(costPrice)](#costPrice)
+- [潜客跟进说明(followUpDescription)](#潜客跟进说明followupdescription)
+- [车型名称(modelName)](#车型名称modelname)
+- [维修项目名称(repairProjectName)](#维修项目名称repairprojectname)
+- [维修项目代码(repairProjectCode)](#维修项目代码repairprojectcode)
+- [工时(workingHours)](#工时workinghours)
+- [单价(unitPrice)](#单价unitprice)
+- [QQ(QQ)](#qq)
+- [主营业务(mainBusiness)](#主营业务mainbusiness)
+- [配件名称(partsName)](#配件名称partsname)
+- [配件代码(partsCode)](#配件代码partscode)
+- [计量单位(countUnit)](#计量单位countunit)
+- [采购价格(purchasePrice)](#采购价格purchaseprice)
+- [最少订购(minOrderNum)](#最少订购minordernum)
+- [建议售价(suggestPrice)](#建议售价suggestprice)
+- [最低售价(minPrice)](#最低售价minprice)
+- [最高售价(maxPrice)](#最高售价maxprice)
+- [仓库名称(wareHouseName)](#仓库名称warehousename)
+- [仓库代码(wareHouseCode)](#仓库代码warehousecode)
+- [审核描述(examineDescription)](#审核描述examinedescription)
+- [意向颜色(purposeColor)](#意向颜色purposecolor)
+- [购车预算(carBudget)](#购车预算carbudget)
+- [初次接待(firstFollow)](#初次接待firstfollow)
+- [对比车型(compareModel)](#对比车型comparemodel)
+- [安全库存(safeStock)](#安全库存safestock)
+- [库存数量(stockNum)](#库存数量stocknum)
+- [成本单价(costPrice)](#成本单价costprice)
 
 ## 模块-正则-规则-错误提示
 
