--- a/校验规则及对应的字段.md
+++ b/校验规则及对应的字段.md
@@ -24,7 +24,7 @@
 - [维修项目代码(repairProjectCode)](#维修项目代码repairprojectcode)
 - [工时(workingHours)](#工时workinghours)
 - [单价(unitPrice)](#单价unitprice)
-- [QQ(QQ)](#qq)
+- [QQ(QQ)](#qqqq)
 - [主营业务(mainBusiness)](#主营业务mainbusiness)
 - [配件名称(partsName)](#配件名称partsname)
 - [配件代码(partsCode)](#配件代码partscode)
