--- a/校验规则及对应的字段.md
+++ b/校验规则及对应的字段.md
@@ -137,7 +137,7 @@
         备注不能超过512个字符，请重新输入
 
 ### <span id="orgName">组织名称</span>(orgName)
-[同地址](#地址(address))
+[同地址](#地址address)
 
 * 最大长度为32
 
@@ -161,14 +161,14 @@
         2.跟进天数格式不正确，请输入1-10000之间的正整数
 
 ### <span id="followUpDescription">潜客跟进说明</span>(followUpDescription)
-[同描述](#description)
+[同描述](#描述description)
 
 * 最大长度为64
 
         跟进说明不能超过64个字符，请重新输入
 
 ### <span id="modelName">车型名称</span>(modelName)
-[同地址](#address)
+[同地址](#地址address)
 
 * 必填
 * 最大长度为128
@@ -251,7 +251,7 @@
         计量单位不能超过8个字符，请重新输入
 
 ### <span id="purchasePrice">采购价格</span>(purchasePrice)
-[同单价](#unitPrice)
+[同单价](#单价unitprice)
 
 * 不允许输入中文、字母、除“.”以外的符号、负数和空格
 * 正确的格式0-99999999.99之间的数字，最多保留2位小数
@@ -259,7 +259,7 @@
         采购价格格式不正确，请输入0-99999999.99之间的数字（最多保留2位小数）
 
 ### <span id="minOrderNum">最少订购</span>(minOrderNum)
-[同工时](#workingHours)
+[同工时](#工时workinghours)
 
 * 不允许输入中文、字母、除“.”以外的符号、负数和空格
 * 正确的格式0-999999.99之间的数字，最多保留2位小数
@@ -267,7 +267,7 @@
         最少订购格式不正确，请输入0-999999.99之间的数字（最多保留2位小数）
 
 ### <span id="suggestPrice">建议售价</span>(suggestPrice)
-[同单价](#unitPrice)
+[同单价](#单价unitprice)
 
 * 不允许输入中文、字母、除“.”以外的符号、负数和空格
 * 正确的格式0-99999999.99之间的数字，最多保留2位小数
@@ -275,7 +275,7 @@
         建议售价格式不正确，请输入0-99999999.99之间的数字（最多保留2位小数）
 
 ### <span id="minPrice">最低售价</span>(minPrice)
-[同单价](#unitPrice)
+[同单价](#单价unitprice)
 
 * 不允许输入中文、字母、除“.”以外的符号、负数和空格
 * 正确的格式0-99999999.99之间的数字，最多保留2位小数
@@ -283,7 +283,7 @@
         最低售价格式不正确，请输入0-99999999.99之间的数字（最多保留2位小数）
 
 ### <span id="maxPrice">最高售价</span>(maxPrice)
-[同单价](#unitPrice)
+[同单价](#单价unitprice)
 
 * 不允许输入中文、字母、除“.”以外的符号、负数和空格
 * 正确的格式0-99999999.99之间的数字，最多保留2位小数
@@ -300,7 +300,7 @@
         2.仓库名称不能超过32个字符，请重新输入
 
 ### <span id="wareHouseCode">仓库代码</span>(wareHouseCode)
-[同配件名称](#partsName)
+[同配件名称](#配件名称partsname)
 
 * 必填
 * 最大长度为32
@@ -311,21 +311,21 @@
         3.仓库代码格式不正确，不允许输入中文和空格
 
 ### <span id="examineDescription">审核描述</span>(examineDescription)
-[同地址](#address)
+[同地址](#地址address)
 
 * 最大长度为128
 
         审核描述不能超过128个字符，请重新输入
 
 ### <span id="purposeColor">意向颜色</span>(purposeColor)
-[同地址](#address)
+[同地址](#地址address)
 
 * 最大长度为32
 
         意向颜色不能超过32个字符，请重新输入
 
 ### <span id="carBudget">购车预算</span>(carBudget)
-[同地址](#address)
+[同地址](#地址address)
 
 * 最大长度为32
 
@@ -339,14 +339,14 @@
         初次接待不能超过128个字符，请重新输入
 
 ### <span id="compareModel">对比车型</span>(compareModel)
-[同地址](#address)
+[同地址](#地址address)
 
 * 最大长度为32
 
         对比车型不能超过32个字符，请重新输入
 
 ### <span id="safeStock">安全库存</span>(safeStock)
-[同工时](#workingHours)
+[同工时](#工时workinghours)
 
 * 必填
 * 不允许输入中文、字母、除“.”以外的符号、负数和空格
@@ -356,7 +356,7 @@
         2.安全库存格式不正确，请输入0-999999.99之间的数字（最多保留2位小数）
 
 ### <span id="stockNum">库存数量</span>(stockNum)
-[同工时](#workingHours)
+[同工时](#工时workinghours)
 
 * 必填
 * 不允许输入中文、字母、除“.”以外的符号、负数和空格
@@ -366,7 +366,7 @@
         2.库存数量格式不正确，请输入0-999999.99之间的数字（最多保留2位小数）
 
 ### <span id="costPrice">成本单价</span>(costPrice)
-[同单价](#unitPrice)
+[同单价](#单价unitprice)
 
 * 库存数量不允许为空，请输入库存数量
 * 库存数量格式不正确，请输入0-999999.99之间的数字（最多保留2位小数）
